...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/experimentHomeScreenWidgetBottomSheetDialogPrimaryButton"
            app:daxButtonSize="large" />

        <com.duckduckgo.common.ui.view.button.DaxButtonGhost
            android:id="@+id/homeScreenWidgetBottomSheetDialogGhostButton"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/experimentHomeScreenWidgetBottomSheetDialogGhostButton"
            app:daxButtonSize="large" />
...
