...

        <com.duckduckgo.app.browser.tabswitcher.NewTabSwitcherButton
            android:id="@+id/tabsMenu"
            android:layout_width="@dimen/toolbarIcon"
            android:layout_height="@dimen/toolbarIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/browserMenu"
            app:layout_constraintStart_toEndOf="@id/fireIconMenu"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/browserMenu"
            android:layout_width="@dimen/toolbarIcon"
...
