...
            app:srcCompat="@drawable/ic_arrow_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/forwardMenuItem"
            style="@style/Widget.DuckDuckGo.NavigationalIcon"
            android:contentDescription="@string/forward"
            app:srcCompat="@drawable/ic_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/refreshMenuItem"
            app:layout_constraintStart_toEndOf="@+id/backMenuItem"
...
