<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/actionBottomSheetVerticalPadding"
    android:paddingBottom="@dimen/actionBottomSheetVerticalPadding">

    <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
        android:id="@+id/primaryCta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/autofillTooltipUseYourAlias"
        app:secondaryText="@string/autofillTooltipUseYourAliasDescription" />

    <com.duckduckgo.mobile.android.ui.view.listitem.TwoLineListItem
        android:id="@+id/secondaryCta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="@string/autofillTooltipGenerateAddress"
        app:secondaryText="@string/autofillTooltipGenerateAddressDescription" />

</LinearLayout>
