<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.duckduckgo.mobile.android.ui.view.button.ButtonSecondaryRounded
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultBrowserMaybeLater"
        android:layout_marginStart="@dimen/keyline_5"
        android:layout_marginEnd="@dimen/keyline_5"
        android:layout_marginBottom="@dimen/keyline_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.duckduckgo.mobile.android.ui.view.button.ButtonPrimaryRounded
        android:id="@+id/launchSettingsButton"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/keyline_5"
        android:layout_marginEnd="@dimen/keyline_5"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:text="@string/defaultBrowserLetsDoIt"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</merge>